--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.15.2",
     "dockerode": "^2.3.1",
-    "http": "0.0.0",
-    "http-proxy": "^1.15.1",
-    "url": "^0.11.0"
+    "express": "^4.14.0",
+    "unirest": "^0.5.1",
   }
 }
